ACS-8120: extended camelContext config

--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -133,6 +133,9 @@
                                 <includes>
                                     <include>org.alfresco:alfresco-hxinsight-connector-common</include>
                                     <include>org.alfresco:alfresco-hxinsight-connector-common-authentication</include>
+                                    <include>org.apache.camel:camel-http-base</include>
+                                    <include>org.apache.camel:camel-http-common</include>
+                                    <include>org.apache.camel:camel-http</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
