ACS-8120: make properties configurable

--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
@@ -3,3 +3,11 @@
 ## System Administrators can override these values in environment specific configurations in
 ## alfresco/tomcat/shared/classes/alfresco-global.properties.
 ##
+auth.providers.hyland-experience.type=oauth2
+auth.providers.hyland-experience.grant-type=urn:hyland:params:oauth:grant-type:api-credentials
+auth.providers.hyland-experience.client-name=acs-insight-connector
+auth.providers.hyland-experience.client-id=
+auth.providers.hyland-experience.client-secret=
+auth.providers.hyland-experience.scope=hxp.integrations
+auth.providers.hyland-experience.token-uri=http://localhost:8001/token
+auth.providers.hyland-experience.environment-key=hxi-env-key
