ACS-8120: replaced XML-config with Java-config

--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
@@ -3,11 +3,15 @@
 ## System Administrators can override these values in environment specific configurations in
 ## alfresco/tomcat/shared/classes/alfresco-global.properties.
 ##
+
+messaging.subsystem.autoStart=true
+events.subsystem.autoStart=true
+
 hxi.auth.providers.hyland-experience.type=oauth2
 hxi.auth.providers.hyland-experience.grant-type=urn:hyland:params:oauth:grant-type:api-credentials
-hxi.auth.providers.hyland-experience.client-name=acs-insight-connector
+hxi.auth.providers.hyland-experience.client-name=acs-hxi-connector
 hxi.auth.providers.hyland-experience.client-id=
 hxi.auth.providers.hyland-experience.client-secret=
 hxi.auth.providers.hyland-experience.scope=hxp.integrations
-hxi.auth.providers.hyland-experience.token-uri=http://localhost:8001/token
+hxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
 hxi.auth.providers.hyland-experience.environment-key=hxi-env-key
