ACS-8120: replaced XML-config with Java-config

--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
@@ -13,5 +13,5 @@ hxi.auth.providers.hyland-experience.client-name=acs-hxi-connector
 hxi.auth.providers.hyland-experience.client-id=
 hxi.auth.providers.hyland-experience.client-secret=
 hxi.auth.providers.hyland-experience.scope=hxp.integrations
-hxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
+hxi.auth.providers.hyland-experience.token-uri=http://localhost:8001/token
 hxi.auth.providers.hyland-experience.environment-key=hxi-env-key
