--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-mail-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-http-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
