--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <camel.version>4.0.0</camel.version>
+        <spring-camel.version>4.0.0</spring-camel.version>
     </properties>
 
     <dependencyManagement>
@@ -56,7 +56,7 @@
         <dependency> <!-- Camel version in extension has to be the same as in ACS -->
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-http</artifactId>
-            <version>${camel.version}</version>
+            <version>${spring-camel.version}</version>
         </dependency>
 
         <dependency>
