--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -14,6 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <!-- Camel version in extension has to be the same as in ACS -->
         <spring-camel.version>4.0.0</spring-camel.version>
     </properties>
 
@@ -53,7 +54,7 @@
             </exclusions>
         </dependency>
 
-        <dependency> <!-- Camel version in extension has to be the same as in ACS -->
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-http</artifactId>
             <version>${spring-camel.version}</version>
