--- a/common-authentication/pom.xml
+++ b/common-authentication/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
