--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -138,6 +138,8 @@
                                 <includes>
                                     <include>org.alfresco:alfresco-hxinsight-connector-common</include>
                                     <include>org.alfresco:alfresco-hxinsight-connector-common-authentication</include>
+                                    <include>jakarta.servlet:jakarta.servlet-api</include>
+                                    <include>org.apache.httpcomponents.client5:httpclient5</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
