--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
@@ -3,3 +3,6 @@
 ## System Administrators can override these values in environment specific configurations in
 ## alfresco/tomcat/shared/classes/alfresco-global.properties.
 ##
+
+hxi.client.baseUrl=http://localhost:8001
+hxi.client.askQuestionUrl=${hxi.client.baseUrl}/v1/questions
