--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -139,6 +139,7 @@
                                     <include>org.alfresco:alfresco-hxinsight-connector-common</include>
                                     <include>org.alfresco:alfresco-hxinsight-connector-common-authentication</include>
                                     <include>jakarta.servlet:jakarta.servlet-api</include>
+                                    <include>org.apache.httpcomponents.core5:httpcore5</include>
                                     <include>org.apache.httpcomponents.core5:httpcore5-h2</include>
                                     <include>org.apache.httpcomponents.client5:httpclient5</include>
                                 </includes>
