--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <commons-io.version>2.16.1</commons-io.version>
         <pdfbox.version>3.0.2</pdfbox.version>
         <aws-sdk-s3.version>2.25.69</aws-sdk-s3.version>
+        <httpclient.version>4.5.14</httpclient.version>
         <wiremock.version>3.6.0</wiremock.version>
 
         <testcontainers.version>1.19.8</testcontainers.version>
@@ -248,6 +249,12 @@
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>s3</artifactId>
                 <version>${aws-sdk-s3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
             </dependency>
 
             <dependency>
