--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
@@ -3,6 +3,7 @@
 ## System Administrators can override these values in environment specific configurations in
 ## alfresco/tomcat/shared/classes/alfresco-global.properties.
 ##
+
 hxi.auth.providers.hyland-experience.type=oauth2
 hxi.auth.providers.hyland-experience.grant-type=urn:hyland:params:oauth:grant-type:api-credentials
 hxi.auth.providers.hyland-experience.client-name=acs-insight-connector
@@ -11,3 +12,6 @@ hxi.auth.providers.hyland-experience.client-secret=
 hxi.auth.providers.hyland-experience.scope=hxp.integrations
 hxi.auth.providers.hyland-experience.token-uri=http://localhost:8001/token
 hxi.auth.providers.hyland-experience.environment-key=hxi-env-key
+hxi.auth.retry.attempts=3
+hxi.auth.retry.initial-delay=500
+hxi.auth.retry.delay-multiplier=2
