Remove sping-boot-starter-test from parent pom

--- a/common-authentication/pom.xml
+++ b/common-authentication/pom.xml
@@ -45,6 +45,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.wiremock.integrations.testcontainers</groupId>
             <artifactId>wiremock-testcontainers-module</artifactId>
             <scope>test</scope>
