--- a/bulk-ingester/pom.xml
+++ b/bulk-ingester/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>alfresco-hxinsight-connector-common-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
