--- a/e2e-test/pom.xml
+++ b/e2e-test/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>alfresco-hxinsight-connector-common-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
