--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test_application
+      - test_distribution
+      - run_e2e_test
     if: >
       github.event_name == 'push' &&
       !(failure() || cancelled()) &&
@@ -186,6 +188,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test_application
+      - test_distribution
+      - run_e2e_test
     if: >
       !(failure() || cancelled()) &&
       (github.ref_name == 'master' || startsWith(github.ref_name, 'release/')) &&
@@ -207,6 +211,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test_application
+      - test_distribution
+      - run_e2e_test
     if: >
       !(failure() || cancelled()) &&
       (github.ref_name == 'master' || startsWith(github.ref_name, 'release/')) &&
@@ -251,6 +257,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test_application
+      - test_distribution
+      - run_e2e_test
     if: >
       !(failure() || cancelled()) &&
       (github.ref_name == 'master' || startsWith(github.ref_name, 'release/')) &&
