ACS-8121: call hxi question api (#427)

--- a/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
+++ b/prediction-applier-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-prediction-applier-extension/alfresco-global.properties
@@ -15,3 +15,5 @@ hxi.auth.providers.hyland-experience.environment-key=hxi-env-key
 hxi.auth.retry.attempts=3
 hxi.auth.retry.initial-delay=500
 hxi.auth.retry.delay-multiplier=2
+
+hxi.client.baseUrl=http://localhost:8001
