--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,9 @@ jobs:
   run_e2e_test:
     name: "Run e2e tests"
     runs-on: ubuntu-latest
-#    needs:
+    env:
+      IS_GITHUB_ACTION: true
+    #    needs:
 #      - pre_commit
     if: >
       !contains(github.event.head_commit.message, '[skip build]') &&
