--- a/prediction-applier-extension/pom.xml
+++ b/prediction-applier-extension/pom.xml
@@ -67,6 +67,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core-test</artifactId>
             <scope>test</scope>
