ACS-8262 Fix E2E test failures (#451)
* Try to fix intermittently failing E2Es

* Try to fix intermittently failing E2Es

* Try to fix intermittently failing E2Es

* Try to fix intermittently failing E2Es

* ACS-8262: Trying out testcontainers with different startup sequence.

* ACS-8262: Temporarily removing all but e2e tests pipeline jobs.

* ACS-8262: Conditional test execution.

* ACS-8262: Conditional test execution - docker-compose handling scripts.

* ACS-8262: Fixing condition check.

* ACS-8262: Fixing condition check.

* ACS-8262: Fixing condition check.

* ACS-8262: Fixing test class name.

* ACS-8262: Fixing CI setup.

* ACS-8262: Fixing CI setup.

* ACS-8262: Bringing back full CI setup.

* ACS-8262: Fixing PMD issue.

* ACS-8262: Trying out some small optimization in CI setup.

* Revert "ACS-8262: Trying out some small optimization in CI setup."

This reverts commit 9fbded2aad825d03bafe49c5dae7f1817fd4bb59.

* ACS-8262: Fixes after master merge, applying code review comments.

* ACS-8262: Fixes after master merge.

---------

Co-authored-by: Krystian Dabrowski <krystian.dabrowski@hyland.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,18 @@ jobs:
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.version=${{ matrix.repoVersion }}
       - name: "Build docker images"
         run: bash ./scripts/ci/buildDockerImages.sh
+      - name: "Start docker-compose and run e2e docker-compose tests"
+        env:
+          GHA_RUN_DC: true
+        run: |
+          ./scripts/ci/start-compose.sh distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
+          mvn ${{ env.MAVEN_CLI_OPTS }} test -pl 'hxinsight-extension,e2e-test' -am -Dtest=CreateNodeDCE2eTest -DfailIfNoTests=false -Dalfresco-platform.version=${{ matrix.repoVersion }}
+      - name: "Stop docker-compose"
+        if: always()
+        run: ./scripts/ci/stop-compose.sh distribution/src/main/resources/docker-compose/docker-compose-minimal.yml
       - name: "Run e2e tests"
+        env:
+          GHA_RUN_DC: false
         run: mvn ${{ env.MAVEN_CLI_OPTS }} verify -pl 'hxinsight-extension,e2e-test' -am -DskipUnitTests -DskipIntegrationTests -Dalfresco-platform.version=${{ matrix.repoVersion }}
 
   push_docker_images:
