--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
     if: >
       (github.ref_name == 'feature/ACSA-240_add-sast-scan-on-pr' || github.ref_name == 'master' || startsWith(github.ref_name, 'release/') || github.event_name == 'pull_request') &&
       github.actor != 'dependabot[bot]' &&
-      !contains(github.event.head_commit.message, '[skip build]'))
+      !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v5.30.0
