ACSA-240 Temporarily remove baseline file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
           summary_output: true
           summary_output_file: results.json
           summary_display: true
-          baseline_file: baseline.json
+          # baseline_file: baseline.json
       - name: "Upload scan result"
         if: success() || failure()
         run: zip readable_output.zip results.json
