--- a/prediction-applier/src/main/resources/application.yml
+++ b/prediction-applier/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   main:
     web-application-type: none
+  datasource:
+    url: jdbc:postgresql://localhost:5432/alfresco
+    username: alfresco
+    password: alfresco
 
 camel:
   springboot:
@@ -34,9 +38,9 @@ auth:
       client-name: acs-insight-connector
     alfresco:
       type: basic
-      client-id:
-      username:
-      password:
+      client-id: dummy-client-id
+      username: alfresco
+      password: alfresco
   retry:
     attempts: 10
     initial-delay: 500
