--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 spring:
   main:
     web-application-type: none
-  datasource:
-    url: jdbc:postgresql://localhost:5432/alfresco
-    username: alfresco
-    password: alfresco
 
 camel:
   springboot.main-run-controller: true
@@ -69,8 +65,8 @@ auth:
       client-name: acs-insight-connector
     alfresco:
       type: basic
-      username: alfresco
-      password: alfresco
+      username:
+      password:
   retry:
     attempts: 10
     initial-delay: 500
