--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,12 +69,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v5.30.0
-      # - uses: Alfresco/alfresco-build-tools/.github/actions/github-download-file@v5.30.0
-      #   with:
-      #     token: ${{ secrets.BOT_GITHUB_TOKEN }}
-      #     repository: "Alfresco/veracode-baseline-archive"
-      #     file-path: "hxinsight-connector/hxinsight-connector-baseline.json"
-      #     target: "baseline.json"
+      - uses: Alfresco/alfresco-build-tools/.github/actions/github-download-file@v5.30.0
+        with:
+          token: ${{ secrets.BOT_GITHUB_TOKEN }}
+          repository: "Alfresco/veracode-baseline-archive"
+          file-path: "hxinsight-connector/hxinsight-connector-baseline.json"
+          target: "baseline.json"
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Run SAST Scan"
@@ -90,7 +90,7 @@ jobs:
           summary_output: true
           summary_output_file: results.json
           summary_display: true
-          # baseline_file: baseline.json
+          baseline_file: baseline.json
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
