ACS-8128: add max nodes to ask about config option

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -17,3 +17,5 @@ hxi.auth.retry.initial-delay=500
 hxi.auth.retry.delay-multiplier=2
 
 hxi.client.baseUrl=http://localhost:8001
+
+hxi.question.max-nodes-to-ask-about=100
