ACS-8147: Specify min Repo version

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/module.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/module.properties
@@ -15,12 +15,12 @@
 
 # Note. These properties are filtered at build time by Maven, single sourcing from POM properties
 module.id=${project.artifactId}
-#module.aliases=myModule-123, my-module
+module.aliases=hxinsight-extension, repository-hxinsight-extension
 module.title=${project.name}
 module.description=${project.description}
 module.version=${project.version}
 
 # The following optional properties can be used to prevent the module from being added
 # to inappropriate versions of the WAR file.
-module.repo.version.min=7.1
-#module.repo.version.max=7.1
+module.repo.version.min=7.3.3
+#module.repo.version.max=7.3.3
