ACS-8147: Specify min Repo version

--- a/hxinsight-extension/pom.xml
+++ b/hxinsight-extension/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <name>Alfresco Connector for Hyland Experience Insight :: Hyland Experience Insight Extension for Alfresco Repository</name>
-    <description>Platform/Repo JAR Module (to be included in the alfresco.war)</description>
+    <description>Hyland Experience Insight extension for Alfresco Repository - JAR module to be included in the alfresco.war</description>
     <artifactId>alfresco-hxinsight-connector-hxinsight-extension</artifactId>
     <packaging>jar</packaging>
 
